--- a/server/package.json
+++ b/server/package.json
@@ -9,8 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "express": "^4.17.1",
     "mfrc522-rpi": "^2.1.3",
-    "mongodb": "^4.2.1"
+    "mongodb": "^4.2.1",
+    "onoff": "^6.0.3",
+    "rpio": "^2.4.2"
   }
 }
