--- a/door/package.json
+++ b/door/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mainserver",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@vlasky/mysql": "github:vlasky/mysql",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "axios": "^0.24.0",
+    "express": "^4.17.1",
+    "mfrc522-rpi": "^2.1.3",
+    "mongodb": "^4.2.1",
+    "onoff": "^6.0.3",
+    "rpio": "^2.4.2"
   }
 }
