--- a/server/package.json
+++ b/server/package.json
@@ -1,17 +1,18 @@
 {
   "name": "mainserver",
   "version": "1.0.0",
-  "description": "",
+  "description": "the core of the onion",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "cvanh",
   "license": "ISC",
   "dependencies": {
-    "@vlasky/mysql": "github:vlasky/mysql",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "local-devices": "^3.2.0",
+    "mysql": "^2.18.1",
+    "ping": "^0.4.1"
   }
 }
